--- a/refs.bib
+++ b/refs.bib
@@ -23,6 +23,13 @@
     note = {R package version 0.1recurring},
     url = {https://github.com/dataknut/dkUtils},
   }
+   @Manual{flextable,
+    title = {flextable: Functions for Tabular Reporting},
+    author = {David Gohel},
+    year = {2020},
+    note = {R package version 0.5.11},
+    url = {https://CRAN.R-project.org/package=flextable},
+  }
   @Book{ggplot2,
     author = {Hadley Wickham},
     title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -82,3 +89,48 @@
     note = {R package version 1.2-2},
     url = {https://CRAN.R-project.org/package=pwr},
   }
+  @Manual{readxl,
+    title = {readxl: Read Excel Files},
+    author = {Hadley Wickham and Jennifer Bryan},
+    year = {2019},
+    note = {R package version 1.3.1},
+    url = {https://CRAN.R-project.org/package=readxl},
+  }
+@Misc{survey,
+    author = {Thomas Lumley},
+    year = {2020},
+    title = {survey: analysis of complex survey samples},
+    note = {R package version 4.0},
+  }
+
+@article{anderson_gg_2018,
+	title = {New {Zealand} {GREEN} {Grid} household electricity demand study 2014-2018},
+	url = {http://reshare.ukdataservice.ac.uk/853334/},
+	doi = {10.5255/UKDA-SN-853334},
+	abstract = {The NZ GREEN Grid project recruited a sample of 25 households in each of two regions of New Zealand (Stephenson et al. 2017). The first sample was recruited in early 2014 and the second in early 2015. Research data includes: 1 minute mean electricity power (W) data collected for each dwelling circuit using Grid Spy monitors on each power circuit (and the incoming power); dwelling \& appliance surveys; occupant time-use diaries (focused on energy use).},
+	urldate = {2018-09-04},
+	author = {Anderson, Ben and Eyers, David and Ford, Rebecca and Giraldo Ocampo, Diana and Peniamina, Rana and Stephenson, Janet and Suomalainen, Kiti and Wilcocks, Lara and Jack, Michael},
+	month = sep,
+	year = {2018},
+	keywords = {SPATIALEC}
+}
+
+
+@article{anderson_ensuring_2020,
+	title = {Ensuring statistics have power: {Guidance} for designing, reporting and acting on electricity demand reduction and behaviour change programs},
+	volume = {59},
+	issn = {2214-6296},
+	shorttitle = {Ensuring statistics have power},
+	url = {http://www.sciencedirect.com/science/article/pii/S2214629619303780},
+	doi = {10.1016/j.erss.2019.101260},
+	abstract = {In this paper we address ongoing confusion over the meaning of statistical significance and statistical power in energy efficiency and energy demand reduction intervention studies. We discuss the role of these concepts in designing studies, in deciding what can be inferred from the results and thus what course of subsequent action to take. We do this using a worked example of a study of Heat Pump demand response in New Zealand to show how to appropriately size experimental and observational studies, the consequences this has for subsequent data analysis and the decisions that can then be taken. The paper then provides two sets of recommendations. The first focuses on the uncontroversial but seemingly ignorable issue of statistical power analysis and sample design, something regularly omitted in the energy studies literature. The second focuses on how to report energy demand reduction study or trial results, make inferences and take commercial or policy-oriented decisions in a contextually appropriate way. The paper therefore offers guidance to researchers tasked with designing and assessing such studies; project managers who need to understand what can count as evidence, for what purpose and in what context and decision makers who need to make defensible commercial or policy decisions based on that evidence. The paper therefore helps all of these stakeholders to distinguish the search for statistical significance from the requirement for actionable evidence and so avoid throwing the substantive baby out with the p-value bathwater.},
+	urldate = {2019-10-15},
+	journal = {Energy Research \& Social Science},
+	author = {Anderson, Ben and Rushby, Tom and Bahaj, Abubakr and James, Patrick},
+	month = jan,
+	year = {2020},
+	keywords = {SPATIALEC, Energy studies, Sample size, Statistical power, Statistical significance, Study design},
+	pages = {101260}
+}
+
+
